2003-09-04  Karl Berry  <karl@gnu.org>

	* texinfo.txi (Conventions): say more about quotations and dashes,
	based on a report to help-texinfo from
        David.Billinghurst@riotinto.com, 18 Jul 2003 16:07:00 +1000.

	* NEWS: mention @tex/@iftex are executed in a group.

2003-09-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Macro Details): mention some makeinfo
	limitations too, from recent bug reports by Patrice Dumas
	<dumas@centre-cired.fr> and (16 Jul 2003 17:21:56 +0200) Jesper
	Harder <harder@ifa.au.dk>.
	* makeinfo/macro.c (define_macro): "end rmacro" is 10 chars long.

2003-08-29 Reiner Steib <Reiner.Steib@gmx.de>
	
	* makeinfo/lang.c (encoding_table): Downcase coding system
	names, since Emacs does not recognize the uppercase names.

	* makeinfo/lang.h: doc fixes.

2003-08-28  Karl Berry  <karl@gnu.org>

	* bootstrap: new file (cvs only).
	* README.dev: mention it.
	Report from hanwen@cs.uu.nl, sample script from
	Akim Demaille <akim@epita.fr>.
	* aclocal.m4: remove from cvs repository.

2003-08-26  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (cm_node): add <LINK> tags. This will produce a
	navigation bar in Mozilla 1.4 (and perhaps earlier).  Original
	code from Han-Wen Nienhuys <hanwen@cs.uu.nl>.

2003-08-23  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: Run tex --help in $tmpdir, to avoid leaving
	texput.log for old TeX versions.  Report from Patrick Welche
	<prlw1@newn.cam.ac.uk>, patch from Akim.

2003-08-20  Karl Berry  <karl@gnu.org>

	* makeinfo/defun.c (cm_defun): skip @ifset/@ifclear insertions
	when looking for the @defun going with this @defunx.  Report from:
	Akim Demaille <akim@epita.fr>, 14 Aug 2003 12:10:37 +0200.

	* makeinfo/insertion.c (cm_end): rewrite error message for
	clarity.

2003-08-13  Karl Berry  <karl@gnu.org>

	* info/indices.c (info_index_apropos): correct typo, whoses ->
	whose.  From: Jesper Harder <harder@ifa.au.dk>, 13 Aug 2003
	14:49:26 +0200.

2003-08-11  Karl Berry  <karl@gnu.org>
